# bs1

./: .gitignore  README.md  pyproject.toml
.data/: executions.json
app/: main.py
app/application/: product_prompts.py  workflows.py  workflows_registry.py
app/core/: config.py  logger.py
app/domain/: models.py  product_identity.py  product_prompts.py
app/infrastructure/: executor.py  image_assets.py  product_url_extractor.py  prompt_generators.py  storage.py
app/infrastructure/product_fetchers/: shopee_fetcher.py
app/interfaces/: api.py
app/interfaces/routes/: __init__.py  health.py  product_debug.py  product_prompt.py  workflow.py
bs1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: bs1_product.xlsx
tests/: test_product_prompts.py  test_smoke.py  test_workflows.py
