[project]
name = "bs1"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",          # test client
  "ruff>=0.6",            # lint/format (เร็วมาก)
  "mypy>=1.8",            # optional type-check
]

[tool.pytest.ini_options]
pythonpath = ["."]