[project]
name = "bs1"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "openai>=1.0",
  "openpyxl>=3.1.2",
  "requests",
  "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]